@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.2
 
 New features:
+- 3017277: Allow wildcard query in the URL browser
 - 3016491: Url Exporter
 - 3016566: Monitoring API
 - 3015939: Cluster collapsing
